# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.181 2005/03/05 05:12:58 wolf31o2 Exp $

  05 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> targets/grp/grp.sh,
  targets/livecd-stage1/livecd-stage1.sh:
  Changing the killall -9 gconfd-2 to gconftool-2 --shutdown and resolving bug
  #73363.

  03 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/alpha-archscript.sh, livecd/runscript/hppa-archscript.sh,
  livecd/runscript/ppc-archscript.sh, livecd/runscript/sparc-archscript.sh,
  livecd/runscript/sparc64-archscript.sh,
  livecd/runscript/x86-archscript.sh:
  Added a new empty livecd file to each archscript. This will be used for an
  identifier by genkernel to allow booting from a non-primary CDROM.

  03 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Catalyst 1.1.6 is here.

  03 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean2-chroot.sh:
  Commenting out stage1 cleaning of /var/db.

  02 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/pre-kmerge.sh:
  Made splash reduction to 1024x768 only for minimal and universal release media.

  01 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean2-chroot.sh:
  Added SLOT files back to /var/db entries in stage1.

  01 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/files/gentoo.png, livecd/files/livecd-local.start,
  livecd/runscript/default-runscript.sh,
  livecd/runscript-support/livecdfs-update.sh,
  targets/livecd-stage2/unmerge.sh:
  Moved portage profiles from livecd-local.start to unmerge.sh, since /usr is
  not writeable at boot. Removed -a from cp in default-runscript.sh to keep
  the copy from preserving permissions and also adding /usr/share/faces and
  default Gentoo icon. We'll see how the icon does for us. Removing serial